# OpenAgno

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_SYNC_PROMPT.md  OpenAgno_Phase10_Plan.md  README.md  SECURITY.md  docker-compose.yml  gateway.py  loader.py  pyproject.toml  requirements-dev.txt  requirements.txt  security.py  service_manager.py  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
deploy/: install-service.sh  openagno.service  whatsapp-bridge.service
docs/: api.mdx  architecture.mdx  changelog.mdx  channels.mdx  cli.mdx  contributing.mdx  deployment.mdx  docs.json  getting-started-no-code.mdx  ide-integration.mdx  index.mdx  knowledge.mdx  mcp.mdx  models.mdx  package-lock.json  package.json  quickstart.mdx  reference.mdx  security.mdx  structure.mdx  studio.mdx  tools.mdx  troubleshooting.mdx  whatsapp-cloud-api.mdx  whatsapp-tunnel.mdx
docs_plan/: OpenAgno_Plan_Estrategico_Consolidado.md  phase1_validation_phase2_plan.md  phase2_validation_phase3_plan.md  phase3_validation_phase4_plan.md  phase4_validation_phase5_plan.md  phase5_validation_phase6_plan_CORRECTED.md  phase6_validation.md  phase7_plan.md  phase8_plan_v2.md  phase9_audit_and_completion_plan.md  plan_agno_agent_platform.md  prompt_fase9_implementacion.md
ide-configs/: README.md  claude-code-setup.sh  vscode-mcp.json  windsurf-mcp.json
management/: __init__.py  admin.py  cli.py  validator.py
openagno/: __init__.py  __main__.py  cli.py
routes/: knowledge_routes.py  tenant_routes.py
tests/: conftest.py  test_byok_model.py  test_cli_commands.py  test_dedup.py  test_ide_configs.py  (+11 more)
(+84 files in other folders)
